[build-system]
requires = ["setuptools>=67.8.0", "setuptools_scm[toml]>=7.1.0", "poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nuki-sesame"
version = "0.0.0" # Placeholder, will be overridden by setuptools_scm
description = "A basic command-line interface for interacting with the Nuki Web API."
authors = ["Tomislav Gudlek"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
colorama = ">=0.4.4"
inquirer = ">=3.1.3"
python-dateutil = ">=2.8.2"
requests = ">=2.26.0"

[tool.poetry.dev-dependencies]
black = ">=23.3.0"

[tool.setuptools_scm]
write_to = "version.py"
